script src corrected

--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-<script src="assets/script/script1.js"></script>
+<script src="assets/script/script.js"></script>
 
 </html>
